--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
+body {
+    background: #f5f5f5;
+}
+
 .table-container {
     padding: 20px;
     display: none;
+}
+
+.card {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .main-content {
@@ -25,14 +33,14 @@
     -webkit-animation-duration: 1s;
     animation-name: animatebottom;
     animation-duration: 1s
-  }
+}
   
-  @-webkit-keyframes animatebottom {
+@-webkit-keyframes animatebottom {
     from { bottom:-100px; opacity:0 } 
     to { bottom:0px; opacity:1 }
-  }
+}
   
-  @keyframes animatebottom { 
+@keyframes animatebottom { 
     from{ bottom:-100px; opacity:0 } 
     to{ bottom:0; opacity:1 }
-  }
+}
