--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,54 @@
+@media all and (max-width: 1200px) { /* screen size until 500px */
+    body {
+        font-size: 0.8em; /* 0.8x default size */
+    }
+    .container-fluid {
+        padding: 0px !important;
+    }
+
+    .table-container {
+        padding-top: 0!important;
+        padding-bottom: 0 !important;
+    }
+}
+
+@media all and (max-width: 500px) { /* screen size until 500px */
+    body * {
+        font-size: 0.8em; /* 0.8x default size */
+    }
+}
+
 body {
     background: #f5f5f5;
 }
 
+h1 {
+    font-size: 1.4em;
+}
+
 .table-container {
-    padding: 20px;
+    padding-top: calc(2vh);
+    padding-bottom: calc(2vh);
     display: none;
 }
+
+
 
 .card {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .main-content {
-    padding: 50px;
+    padding: calc(2.5vh);
+    width: 100%;
 }
 
 .loading-container {
-    padding: 50px;
+    padding: calc(50vh);
 }
 
 #loading-text{
     padding-top: 10px;
-}
-
-.button-row {
-    padding-bottom: 20px;
 }
 
 .animate-bottom {
