--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 }
 
 @media all and (max-width: 500px) { /* screen size until 500px */
-    body * {
+    table * {
         font-size: 0.8em; /* 0.8x default size */
     }
 }
@@ -32,8 +32,6 @@ h1 {
     display: none;
 }
 
-
-
 .card {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
@@ -43,12 +41,8 @@ h1 {
     width: 100%;
 }
 
-.loading-container {
-    padding: calc(50vh);
-}
-
 #loading-text{
-    padding-top: 10px;
+    padding: calc(2vh);
 }
 
 .animate-bottom {
