--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+@media (max-width: 978px) {
+    .container {
+      padding:0;
+      margin:0;
+    }
+
+    body {
+      padding:0;
+    }
+}
+
 body {
     background: #f5f5f5;
 }
@@ -16,12 +27,26 @@ h1 {
     background-color: white;   
 }
 
+.flex-container {
+    display: flex !important;
+    flex-direction: column !important;
+    height: 100vh !important;
+}
+
+.flex-fill-height {
+    flex: 1 !important;
+}
+
 .card {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .box-padding {
     padding: calc(2.5vh);
+}
+
+#footer {
+    padding-bottom: 5px;
 }
 
 .loading-container {
