--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,41 @@
     }
 }
 
-
 body {
     background: #f5f5f5;
 }
 
 h1 {
     font-size: 1.5em;
+}
+
+.form-control.datetimepicker {
+    background-color: white;
+}
+
+.picker-switch table.table-condensed {
+    width: 100%;
+}
+
+.dropdown-menu {
+    padding: 0px 0;
+}
+
+.dropdown-menu ul {
+    margin-bottom: 0.5rem;
+}
+
+.picker-switch td {
+    text-align: center;
+}
+
+.datetimepicker-today-button {
+    background-color: #e9ecef;
+    border: 1px solid rgba(0,0,0,.15);
+}
+
+.day:not(.disabled) {
+    font-weight: bold;   
 }
 
 .table-container {
@@ -109,7 +137,6 @@ h1 {
 .no-outline-button, .no-outline-button:focus, .no-outline-button:active {
     box-shadow: none !important;
     outline: none !important;
-
 }
 
 .no-href-focus:focus {
