--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,21 @@ h1 {
     border: 1px solid rgba(0,0,0,.15);
 }
 
+.table-cell-tooltip {
+    display:inline-block;
+    width:100%;
+    height:100%;
+}
+
+.tooltip-img {
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.tooltip.show {
+    opacity: 1;
+}
+
 .day:not(.disabled) {
     font-weight: bold;   
 }
